@@ -1,7 +1,8 @@
 
 Sat Sep  1 15:51:53 CDT 2001  Linas Vepstas <linas@linas.org>
 
-	* proj-props.c: convert the project properties dialog to
+	* props-task.c: add task properties GUI dialog
+	* props-proj.c: convert the project properties dialog to
 	  glade, add all the missing bits of the project properties.
 
 	* util.[ch]: clairify date utilities
